added styles to 1st section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link href="/home/jonathan/Desktop/repos/Landing-Page/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- 1ST SECTION -->
-    <div>
+    <div class="section-one">
         <h3>
             <header>Header Logo</header>
         </h3>
@@ -20,15 +21,14 @@
             <li>header link three</li>
         </ul>
         <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the<br> main title. It's a smaller font and the color is
-            lower<br>contrast</p>
+        <p class="text">This website has some subtext that goes here under the<br>main title. It's a smaller font and
+            the color is lower<br>contrast</p>
         <p>this is a placeholder for an image</p>
-        <br>
         <button type="button">Sign up</button>
 
     </div>
     <!-- 2ND SECTION -->
-    <div>
+    <div class="section-two">
         <h2>Some random information.</h2>
         <div></div>
         <p>this is some subtext<br>under an illustration<br>or image</p>
